# reflector-rs

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker_test.sh
.github/workflows/: ci.yml  release.yml
e2e/: config-addrchange.toml  config-dial.toml  config-family-v6.toml  config-family.toml  config.toml  probe.py  run.py
src/: capture.rs  config.rs  dispatch.rs  error.rs  frame.rs  interface.rs  lib.rs  logging.rs  main.rs  net.rs  reactor.rs  reflector.rs  sys.rs
src/capture/: af_packet.rs  bpf.rs  filter.rs
src/config/: env.rs  error.rs  raw.rs  value.rs
src/dispatch/: datagram.rs  dial_context.rs  interface_table.rs  multicast.rs
src/interface/: address_monitor.rs  getifaddrs.rs  rtnetlink.rs
src/interface/address_monitor/: route.rs  rtnetlink.rs
src/net/: checksum.rs  frame.rs  http.rs  mac.rs  mdns.rs  packet.rs  port_reservation.rs  ssdp.rs  stream_buffer.rs  tcp.rs
src/net/http/: framing.rs
src/net/ssdp/: dial.rs
src/reactor/: arena.rs  mod.rs  signal.rs
src/reflector/: dial.rs  mdns.rs  ssdp.rs  wol.rs
src/reflector/dial/: connection.rs  proxy.rs  rewrite.rs
src/reflector/ssdp/: search.rs
