[package]
name = "reflector"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "1"
log = { version = "0.4", features = ["release_max_level_debug"] }
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
warnings = "deny"
let_underscore_drop = "deny"
unreachable_pub = "deny"

[lints.clippy]
all = "deny"
pedantic = "deny"
dbg_macro = "deny"
mod_module_files = "deny"
todo = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
